--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "restaurant-page",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"webpack",
+    "watch": "webpack --progress --watch"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,6 @@
   },
   "dependencies": {
     "lodash": "^4.17.21"
-  }
+  },
+  "description": ""
 }
